# sentiment_analysis

./: .gitattributes  .gitignore  LICENSE  NaiveBayesClassifier.py  README.md  Untitled.ipynb  argumentparser.py  backup.py  bigram_model.py  classify.py  classify_lang.py  classify_lang.spec  classify_sentence.py  environment.yml  evaluate_corpora.py  merge_data.py  merge_rt_data.py  negative_char.p  ngram_model.py  preprocess_review_data.py  preprocess_rt_data.py  preprocess_twitter_data.py  requirements.in  requirements.txt  setup.cfg
corpora/: merged_sentiment_data.csv
deprecated/: NestedDict_old.py  evaluate_corpora_old.py  ngram_model_old.py  word_embedding.py
models/: negative_char_n5.p  negative_char_n6_nostopwords.p  negative_n1_nostopwords_stemmed_rottentomatoes.p  negative_n1_stemmed_rottentomatoes.p  negative_n2_char_rottentomatoes.p  negative_n2_nostopwords_stemmed.p  negative_n2_nostopwords_stemmed_rottentomatoes.p  negative_n2_rottentomatoes.p  negative_n2_stemmed_rottentomatoes.p  negative_n2_stemmed_twitter.p  negative_n3.p  negative_n3_char_rottentomatoes.p  negative_n3_nostopwords.p  negative_n3_nostopwords_stemmed.p  negative_n3_nostopwords_stemmed_rottentomatoes.p  negative_n3_nostopwords_stemmed_twitter.p  negative_n3_rottentomatoes.p  negative_n3_stemmed.p  negative_n3_stemmed_rottentomatoes.p  negative_n3_stemmed_twitter.p  negative_n4_char_nostopwords.p  negative_n4_char_rottentomatoes.p  negative_n4_stemmed_rottentomatoes.p  negative_n5_char_rottentomatoes.p  negative_n5_char_stemmed_rottentomatoes.p  negative_n5_nostopwords_stemmed.p  negative_n7_char_nostopwords.p  negative_n7_char_rottentomatoes.p  positive_char.p  (+28 more)
(+79 files in other folders)
