[metadata]
name = sentiment_analysis
version = 0.0.1
description = A simple package for sentiment analysis
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = sentiment, analysis, language, model
license = GNU GPL 3.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    matplotlib
    nltk
    numpy
    pandas
    regex
    scikit-learn

# TODO extras
# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

# [options.packages.find]
# exclude =
#     src.subpackage1
#     src.subpackage2

# [options.data_files]
# /etc/my_package =
#     site.d/00_default.conf
#     host.d/00_default.conf
# data = data/img/logo.png, data/svg/icon.svg