[metadata]
name = sentiment_analysis
version = 0.1.0
description = A simple package for sentiment analysis
long_description = file: README.md
keywords = sentiment, analysis, language, model
author = Steven Bal
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    matplotlib
    ngram@git+https://github.com/stevenbal/ngram.git@master#egg=ngram
    numpy
    pandas
    scikit-learn

[options.extras_require]
tests =
    pytest
    isort
    black
release =
    bumpversion
    twine